# updsvc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Svc.cpp  Svc.h  SvcConfig.cpp  SvcControl.cpp  SvcTest.cpp
Settings/: .gitignore  CMakeLists.txt  Settings.aps  Settings.cpp  Settings.h  Settings.rc  Settings.sln  Settings.vcxproj  Settings.vcxproj.filters  SettingsDlg.cpp  SettingsDlg.h  Write.cpp  cpp.hint  resource.h
Settings/res/: Settings.rc2
